# Attendify

./: .gitignore  COMPETITION_README.md  FACE_RECOGNITION_GUIDE.md  FINGERPRINT_SCANNER_README.md  FRONTEND_INTEGRATION.md  INTEGRATION_COMPLETE.md  QUICK_START.md  README.md  TEST_REPORT.md  attendance.db  capture_faces.py  requirements.txt  test_anomalies.py  train_faces.py  validate_system.py  view_anomalies.py
backend/: .gitignore  README.md  attendance.db  attendance_main.py  config.py  database.py  demo_webcam.py  init_users.py  main.py  models.py  package-lock.json  pyproject.toml  schemas.py  seed_students.py  services.py  solver.py  test_imports.py  test_mediapipe.py  timetable_models.py  timetable_routes.py
backend/app/: main.py
backend/app/api/routes/: analytics.py  attendance.py  auth.py  notices.py  sessions.py  timetable.py  users.py
backend/app/core/: config.py  config_thresholds.py  database.py  firebase.py  logging.py  models.py
backend/app/models/: attendance.py  face_model.py  labels.pickle  lbph_model.yml  session.py  timetable.py  user.py
backend/app/schemas/: attendance.py  auth.py  timetable.py  user_management.py
backend/app/services/: anomaly_service.py  face_recognition.py  face_service.py  liveness_service.py  timetable_solver.py  verification_service.py
backend/models/: attendance.py  face_model.py  timetable.py
backend/models/_data-face/: README.md  _data-face.md
backend/scripts/: sync_faces_to_db.py
backend/tests/: test_verification.py
backend/timetable_parser/: parse_timetable.py
frontend/: index.html  package-lock.json  (+1 more)
(+101 files in other folders)
