[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attendify-backend"
version = "1.0.0"
description = "Enterprise-grade unified system for Attendance Verification & Timetable Generation"
authors = [
    {name = "Attendify Team", email = "team@attendify.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "ortools>=9.7.0",
    "face-recognition",  # Optional for production
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
face-recognition = [
    "cmake>=3.26.0",
    "dlib>=19.24.0",
    "face-recognition>=1.3.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"